--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.javaproject.ext</groupId>
-    <artifactId>city-register</artifactId>
+    <artifactId>register-office</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -17,13 +17,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
-        </dependency>
-
     </dependencies>
-
 
 </project>
