--- a/network/src/main/resources/server.properties
+++ b/network/src/main/resources/server.properties
@@ -1,3 +1,3 @@
-MORNING=edu.javaproject.net.greet.MorningGreet
-EVENING=edu.javaproject.net.greet.EveningGreet
-DAY=edu.javaproject.net.greet.DayGreet
+MORNING=edu.javaproject.greet.MorningGreet
+EVENING=edu.javaproject.greet.EveningGreet
+DAY=edu.javaproject.greet.DayGreet
