--- a/network-tcp/client/pom.xml
+++ b/network-tcp/client/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>network-tcp</artifactId>
-        <groupId>edu.javaproject.net</groupId>
+        <groupId>edu.javacourse.net</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
