--- a/network-tcp/server/pom.xml
+++ b/network-tcp/server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>network-tcp</artifactId>
-        <groupId>edu.javaproject.net</groupId>
+        <groupId>edu.javacourse.net</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,17 +13,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>edu.javaproject.net</groupId>
+            <groupId>edu.javacourse.net</groupId>
             <artifactId>api</artifactId>
             <version>1.0</version>
         </dependency>
 
         <dependency>
-            <groupId>edu.javaproject.net</groupId>
+            <groupId>edu.javacourse.net</groupId>
             <artifactId>handlers</artifactId>
             <version>1.0</version>
         </dependency>
-
     </dependencies>
+
 
 </project>
