--- a/network-tcp/server/src/main/resources/server.properties
+++ b/network-tcp/server/src/main/resources/server.properties
@@ -1,3 +1,3 @@
-MORNING=javaproject.greet.MorningGreet
-EVENING=javaproject.greet.EveningGreet
-DAY=javaproject.greet.DayGreet
+MORNING=javacourse.greet.MorningGreet
+EVENING=javacourse.greet.EveningGreet
+DAY=javacourse.greet.DayGreet
