--- a/network/src/main/resources/server.properties
+++ b/network/src/main/resources/server.properties
@@ -1,3 +1,3 @@
-MORNING=edu.javaproject.greet.MorningGreet
-EVENING=edu.javaproject.greet.EveningGreet
-DAY=edu.javaproject.greet.DayGreet
+MORNING=edu.javacourse.greet.MorningGreet
+EVENING=edu.javacourse.greet.EveningGreet
+DAY=edu.javacourse.greet.DayGreet
