--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.javaproject.ext</groupId>
+    <groupId>edu.javacourse.ext</groupId>
     <artifactId>register-office</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -17,6 +17,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.14.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
