--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>spring-context</artifactId>
             <version>5.2.5.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>5.2.5.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
