--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>spring-orm</artifactId>
             <version>5.2.5.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
