--- a/student/pom.xml
+++ b/student/pom.xml
@@ -4,12 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.javacourse.ext</groupId>
-    <artifactId>register-office</artifactId>
-    <version>1.0</version>
+    <groupId>edu.javaproject.ext</groupId>
+    <artifactId>student</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-
-
 
     <dependencies>
 
@@ -75,6 +73,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.2.5.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
             <version>2.30.1</version>
@@ -105,7 +110,6 @@
         </dependency>
 
     </dependencies>
-
 
     <build>
         <plugins>
