--- a/student/pom.xml
+++ b/student/pom.xml
@@ -116,6 +116,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
